force-app/main/default/objects/Communication_Configuration__c/Communication_Configuration__c.object-meta.xml
<CustomObject>
    <label>Communication Configuration</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communication Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>