force-app/main/default/objects/Communication_Configuration__c/fields/Custom_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Custom_Criteria__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Custom Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>