force-app/main/default/objects/Communication_Configuration__c/fields/Eligibility_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Criteria__c</fullName>
    <description>To check the eligibility criteria of selected role</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligibility Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>