force-app/main/default/objects/Communication_Configuration__c/fields/Exposure_Type__c.field-meta.xml
<CustomField>
    <fullName>Exposure_Type__c</fullName>
    <label>Exposure Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AutoDamage</fullName>
            </value>
            <value>
                <fullName>BusinessInt</fullName>
                <label>Business Interruption</label>
            </value>
            <value>
                <fullName>EmployerLiability</fullName>
                <label>Employer Liability</label>
            </value>
            <value>
                <fullName>LossOfUse</fullName>
            </value>
            <value>
                <fullName>PersonalPropertyDamage</fullName>
            </value>
            <value>
                <fullName>vehicle</fullName>
            </value>
            <value>
                <fullName>LivingExp</fullName>
            </value>
            <value>
                <fullName>building</fullName>
            </value>
            <value>
                <fullName>Contents</fullName>
            </value>
            <value>
                <fullName>benefits</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>BoilerMach</fullName>
            </value>
            <value>
                <fullName>PropertyDamage</fullName>
            </value>
            <value>
                <fullName>cargo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>