force-app/main/default/objects/Communication_Configuration__c/fields/Fax_Subject_FR__c.field-meta.xml
<CustomField>
    <fullName>Fax_Subject_FR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fax Subject FR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>