force-app/main/default/objects/Communication_Configuration__c/fields/Print_Subject_EN__c.field-meta.xml
<CustomField>
    <fullName>Print_Subject_EN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Print Subject EN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>