force-app/main/default/objects/Communication_Configuration__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>insured</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <label>Test</label>
            </value>
            <value>
                <fullName>driver</fullName>
            </value>
            <value>
                <fullName>CommunicationContact</fullName>
            </value>
            <value>
                <fullName>maincontact</fullName>
            </value>
            <value>
                <fullName>reporter</fullName>
            </value>
            <value>
                <fullName>claimant</fullName>
            </value>
            <value>
                <fullName>agent</fullName>
            </value>
            <value>
                <fullName>custodian</fullName>
            </value>
            <value>
                <fullName>ExtLegalRepSF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>