force-app/main/default/objects/Communication_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EventName__c</columns>
    <columns>Eligibility_Criteria__c</columns>
    <columns>Communication_Type__c</columns>
    <columns>Custom_Criteria__c</columns>
    <columns>Role__c</columns>
    <columns>Exposure_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>