force-app/main/default/objects/Communication_Configuration__c/listViews/All_Communication_Contact_Configs.listView-meta.xml
<ListView>
    <fullName>All_Communication_Contact_Configs</fullName>
    <columns>NAME</columns>
    <columns>EventName__c</columns>
    <columns>Communication_Type__c</columns>
    <columns>Role__c</columns>
    <columns>Active__c</columns>
    <columns>Custom_Criteria__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Role__c</field>
        <operation>equals</operation>
        <value>CommunicationContact</value>
    </filters>
    <label>All Communication Contact Configs</label>
</ListView>